--- a/css/main.css
+++ b/css/main.css
@@ -97,37 +97,49 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: #ffffe6;
   height: 100%;
+  width: 100%
 }
 
 body {
   font-family: 'Source Sans Pro', sans-serif;
-  padding: 2em;
+  font-weight: 700;
   font-size: 1.25em;
+  padding: 2em;
   height: 100%;
+  text-align: center;
 }
 
 .wrapper {
   /*add display:flex and set justify-content to space-between*/
-  font-weight: 700;
   display: flex;
   justify-content: space-between;
+  font-weight: 700;
 }
 
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
+  color: #3399ff;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
+  font-size: 1.25em;
+  height: auto;
   width: 30%;
+  padding: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.div-2,.div-3 {
+  border-left-style: solid;
+  border-left-color: #b3b3b3;
+}
+
+.wrapper span {
+  font-family: 'Lora', serif;
+  font-size: 1.3em;
+}
 
 
 
